--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
   "name": "autocompletetextfield",
+  "author": "Matias Turra",
+  "license": "MIT",
   "version": "1.0.0",
   "description": "",
   "keywords": [],
@@ -21,6 +23,10 @@
     "@babel/runtime": "7.13.8",
     "typescript": "4.1.3"
   },
+    "peerDependencies": {
+      "react": "18.2.0",
+      "react-dom": "18.2.0"
+    },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
