--- a/package.json
+++ b/package.json
@@ -1,15 +1,17 @@
 {
-  "name": "autocompletetextfield",
+  "name": "react-autocompletetextfield",
   "author": "Matias Turra",
   "license": "MIT",
   "version": "1.0.0",
   "description": "",
   "keywords": [],
-  "main": "src/index.js",
+  "main": "dist/index.js",
+  "module": "dist/index.es.js",
   "dependencies": {
     "@emotion/react": "11.10.6",
     "@emotion/styled": "11.10.6",
     "@mui/material": "5.11.15",
+    "@rollup/plugin-node-resolve": "^15.1.0",
     "get-input-selection": "1.1.4",
     "loader-utils": "3.2.1",
     "lodash.isequal": "4.5.0",
@@ -17,21 +19,41 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-scripts": "5.0.1",
+    "rollup-plugin-babel": "^4.4.0",
+    "rollup-plugin-peer-deps-external": "^2.2.4",
     "textarea-caret": "3.1.0"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.22.9",
+    "@babel/preset-react": "^7.22.5",
+    "@babel/preset-typescript": "^7.22.5",
     "@babel/runtime": "7.13.8",
+    "@rollup/plugin-commonjs": "^25.0.3",
+    "@storybook/addon-essentials": "^7.1.1",
+    "@storybook/addon-interactions": "^7.1.1",
+    "@storybook/addon-links": "^7.1.1",
+    "@storybook/addon-onboarding": "^1.0.8",
+    "@storybook/blocks": "^7.1.1",
+    "@storybook/react": "^7.1.1",
+    "@storybook/react-webpack5": "^7.1.1",
+    "@storybook/testing-library": "^0.2.0",
+    "rollup-plugin-postcss": "^4.0.2",
+    "rollup-plugin-terser": "^7.0.2",
+    "storybook": "^7.1.1",
     "typescript": "4.1.3"
   },
-    "peerDependencies": {
-      "react": "18.2.0",
-      "react-dom": "18.2.0"
-    },
+  "peerDependencies": {
+    "react": "18.2.0",
+    "react-dom": "18.2.0"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build",
+    "build-lib": "rollup -c"
   },
   "browserslist": [
     ">0.2%",
